# ExtreemeDB

./: CMakeLists.txt  Makefile  README.md
include/: globals.h  plsql_parser.h  storage_engine.h  table.h  types.h
src/: main.cpp
src/database/: index.cpp  storage_engine.cpp  table.cpp
src/plsql/: executor.cpp  lexer.cpp  parser.cpp
src/query/: query_processor.cpp
src/utils/: logger.cpp
web-ui/: go.mod  handlers.go  main.go  models.go
web-ui/static/: index.html
web-ui/static/css/: style.css
web-ui/static/js/: app.js
